ENADID, Población con discapacidad en México

--- a/R/ENADID 2023_Discapacidad en Mèxico.Rmd
+++ b/R/ENADID 2023_Discapacidad en Mèxico.Rmd
@@ -161,3 +161,27 @@ La **Encuesta Nacional de la Dinámica Demográfica (ENADID)** es una encuesta e
 
 
 ![](../Output/ENADID 2023.png){width="90%" fig-align="center"}
+
+## Referencias  
+
+INEGI. (2024). Comunicación social, Estadísticas a propósito del día internacional de las personas con discapacidad (3 de diciembre). Retrieved April 8, 2025, from https://www.un.org/es/observances/day-of-  
+
+Librerias que se usaron en el documento
+
+```{r, echo = FALSE, eval = TRUE}
+sesion_info <- devtools::session_info()
+require(knitr)
+require(kableExtra)
+kable(dplyr::select(tibble::as_tibble(sesion_info$packages %>% dplyr::filter(attached == TRUE)),
+                    c(package, loadedversion, source))) %>%
+ kable_styling(font_size = 10, 
+               bootstrap_options = c("condensed", "responsive", "bordered")) %>%
+  kable_classic(full_width = TRUE, html_font = "montserrat") %>% 
+   scroll_box(width = "100%", height = "400px") %>%  
+    gsub("font-size: initial !important;", "font-size: 10pt !important;", .)
+```
+
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence" style="border-width:0"/></a><br />This work by [**Diana Villasana Ocampo**]{xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"} is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+
+
+
